--- a/notebooks/panel.ipynb
+++ b/notebooks/panel.ipynb
@@ -2,223 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>week_start_date</th>\n",
-       "      <th>sales_org</th>\n",
-       "      <th>dp_cust</th>\n",
-       "      <th>from_loc</th>\n",
-       "      <th>dmd_item_10</th>\n",
-       "      <th>qty</th>\n",
-       "      <th>descr</th>\n",
-       "      <th>division</th>\n",
-       "      <th>franchise</th>\n",
-       "      <th>subbrand</th>\n",
-       "      <th>...</th>\n",
-       "      <th>promotion_type</th>\n",
-       "      <th>total_expense_trade</th>\n",
-       "      <th>forecast_cot_spend</th>\n",
-       "      <th>price_sch3</th>\n",
-       "      <th>po_qty_week_1</th>\n",
-       "      <th>po_qty_week_2</th>\n",
-       "      <th>po_qty_week_3</th>\n",
-       "      <th>po_qty_week_4</th>\n",
-       "      <th>po_qty_week_8</th>\n",
-       "      <th>avg_order_priority</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2021-09-13</td>\n",
-       "      <td>US04</td>\n",
-       "      <td>6902037</td>\n",
-       "      <td>5103</td>\n",
-       "      <td>77800819</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2021-09-13</td>\n",
-       "      <td>US04</td>\n",
-       "      <td>6902037</td>\n",
-       "      <td>5208</td>\n",
-       "      <td>1566500023</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Sam H PirBty AgWtChdr Vbx 40pk 20oz</td>\n",
-       "      <td>Salty Snacking</td>\n",
-       "      <td>PIRATES BOOTY</td>\n",
-       "      <td>PIRATE BRANDS PB BOOTY</td>\n",
-       "      <td>...</td>\n",
-       "      <td>EDLP</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2021-09-13</td>\n",
-       "      <td>US04</td>\n",
-       "      <td>6902037</td>\n",
-       "      <td>5208</td>\n",
-       "      <td>1692502250</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>SP HotCocoa 17oz</td>\n",
-       "      <td>Salty Snacking</td>\n",
-       "      <td>SKINNYPOP</td>\n",
-       "      <td>SKINNYPOP RTE</td>\n",
-       "      <td>...</td>\n",
-       "      <td>EDLP</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2021-09-13</td>\n",
-       "      <td>US04</td>\n",
-       "      <td>6902038</td>\n",
-       "      <td>5103</td>\n",
-       "      <td>5571200802</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>DtPtz Org 1.5oz 60</td>\n",
-       "      <td>Salty Snacking</td>\n",
-       "      <td>DOTS</td>\n",
-       "      <td>DOTS NO SUB</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Correction</td>\n",
-       "      <td>-332.91</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2021-09-13</td>\n",
-       "      <td>US04</td>\n",
-       "      <td>6902038</td>\n",
-       "      <td>5401</td>\n",
-       "      <td>1566500030</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>V PirBty AgWtChdr 12pk 6oz 12</td>\n",
-       "      <td>Salty Snacking</td>\n",
-       "      <td>PIRATES BOOTY</td>\n",
-       "      <td>PIRATE BRANDS PB BOOTY</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Hi Lo</td>\n",
-       "      <td>7121.11</td>\n",
-       "      <td>352076.72</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 27 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  week_start_date sales_org  dp_cust  from_loc  dmd_item_10   qty  \\\n",
-       "0      2021-09-13      US04  6902037      5103     77800819   0.0   \n",
-       "1      2021-09-13      US04  6902037      5208   1566500023   0.0   \n",
-       "2      2021-09-13      US04  6902037      5208   1692502250   0.0   \n",
-       "3      2021-09-13      US04  6902038      5103   5571200802  96.0   \n",
-       "4      2021-09-13      US04  6902038      5401   1566500030   0.0   \n",
-       "\n",
-       "                                 descr        division      franchise  \\\n",
-       "0                                  NaN             NaN            NaN   \n",
-       "1  Sam H PirBty AgWtChdr Vbx 40pk 20oz  Salty Snacking  PIRATES BOOTY   \n",
-       "2                     SP HotCocoa 17oz  Salty Snacking      SKINNYPOP   \n",
-       "3                   DtPtz Org 1.5oz 60  Salty Snacking           DOTS   \n",
-       "4        V PirBty AgWtChdr 12pk 6oz 12  Salty Snacking  PIRATES BOOTY   \n",
-       "\n",
-       "                 subbrand  ... promotion_type  total_expense_trade  \\\n",
-       "0                     NaN  ...            NaN                  NaN   \n",
-       "1  PIRATE BRANDS PB BOOTY  ...           EDLP                 0.00   \n",
-       "2           SKINNYPOP RTE  ...           EDLP                 0.00   \n",
-       "3             DOTS NO SUB  ...     Correction              -332.91   \n",
-       "4  PIRATE BRANDS PB BOOTY  ...          Hi Lo              7121.11   \n",
-       "\n",
-       "   forecast_cot_spend price_sch3 po_qty_week_1 po_qty_week_2  po_qty_week_3  \\\n",
-       "0                 NaN        0.0           0.0           0.0            0.0   \n",
-       "1                0.00        0.0           0.0           0.0            0.0   \n",
-       "2                0.00        0.0           0.0           0.0            0.0   \n",
-       "3                0.00        0.0           0.0           0.0            0.0   \n",
-       "4           352076.72        0.0           0.0           0.0            0.0   \n",
-       "\n",
-       "  po_qty_week_4  po_qty_week_8  avg_order_priority  \n",
-       "0           0.0            0.0                 0.0  \n",
-       "1           0.0            0.0                 0.0  \n",
-       "2           0.0            0.0                 0.0  \n",
-       "3           0.0            0.0                 0.0  \n",
-       "4           0.0            0.0                 0.0  \n",
-       "\n",
-       "[5 rows x 27 columns]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -226,20 +12,221 @@
     "import seaborn as sns\n",
     "\n",
     "# import data from C:\\Data\\hershey_promo_impact\\shipment_hist_weekly_with_promo_features.csv\n",
-    "data = pd.read_csv(\"C:\\\\Data\\\\hershey_promo_impact\\\\shipment_hist_weekly_with_promo_features.csv\")\n",
+    "df = pd.read_csv(\"C:\\\\Data\\\\hershey_promo_impact\\\\shipment_hist_weekly_with_promo_features.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Primary Key ['sales_org', 'dp_cust', 'from_loc', 'dmd_item_10', 'week_start_date']\n",
+    "qty: shipment quantity\n",
+    "po_qty_week_1: 1 weak ahead purchase order quantity\n",
+    "price_sch3: base price, time invariant\n",
+    "total_expense_trade'\n",
+    "forecast_cot_spend'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Columns defining the new primary key\n",
+    "groupby_cols = ['sales_org', 'dp_cust', 'dmd_item_10', 'week_start_date']\n",
     "\n",
-    "# check data\n",
-    "data.head()\n",
+    "# Numerical columns to sum\n",
+    "sum_columns = ['qty', 'po_qty_week_1', 'po_qty_week_2', 'po_qty_week_3', 'po_qty_week_4', 'po_qty_week_8']\n",
+    "\n",
+    "# Non-numerical columns to pick the first non-missing value\n",
+    "first_non_missing_columns = [\n",
+    "    'descr', 'division', 'franchise', 'subbrand', 'brand', 'packtype',\n",
+    "    'ppg_family', 'ppg', 'season', 'sales_status', 'on_promotion',\n",
+    "    'promotion_type', 'total_expense_trade', 'forecast_cot_spend', 'price_sch3'\n",
+    "]\n",
+    "\n",
+    "# Define aggregation rules\n",
+    "agg_dict = {col: 'sum' for col in sum_columns}\n",
+    "agg_dict.update({col: 'first' for col in first_non_missing_columns})\n",
+    "\n",
+    "# Perform the aggregation\n",
+    "aggregated_df = df.groupby(groupby_cols).agg(agg_dict).reset_index()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# replace promotion_type with NA if on_promotion is 0\n",
+    "aggregated_df.loc[aggregated_df['on_promotion'] == False, 'promotion_type'] = np.nan\n",
+    "\n",
+    "# create dummy variables for promotion_type\n",
+    "aggregated_df = pd.get_dummies(aggregated_df, columns=['promotion_type'], dummy_na=True)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sales_org                                      object\n",
+      "dp_cust                                         int64\n",
+      "dmd_item_10                                     int64\n",
+      "week_start_date                        datetime64[ns]\n",
+      "qty                                           float64\n",
+      "po_qty_week_1                                 float64\n",
+      "po_qty_week_2                                 float64\n",
+      "po_qty_week_3                                 float64\n",
+      "po_qty_week_4                                 float64\n",
+      "po_qty_week_8                                 float64\n",
+      "descr                                          object\n",
+      "division                                       object\n",
+      "franchise                                      object\n",
+      "subbrand                                       object\n",
+      "brand                                          object\n",
+      "packtype                                      float64\n",
+      "ppg_family                                    float64\n",
+      "ppg                                            object\n",
+      "season                                         object\n",
+      "sales_status                                   object\n",
+      "on_promotion                                     bool\n",
+      "total_expense_trade                           float64\n",
+      "forecast_cot_spend                            float64\n",
+      "price_sch3                                    float64\n",
+      "promotion_type_Corporate Promotions              bool\n",
+      "promotion_type_Correction                        bool\n",
+      "promotion_type_EDLC                              bool\n",
+      "promotion_type_EDLP                              bool\n",
+      "promotion_type_Hi Lo                             bool\n",
+      "promotion_type_Miscellaneous                     bool\n",
+      "promotion_type_nan                               bool\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# change data type for week_start_date to datetime\n",
+    "aggregated_df['week_start_date'] = pd.to_datetime(aggregated_df['week_start_date'])\n",
+    "\n",
+    "# check data types for each column\n",
+    "print(aggregated_df.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Panel Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                          PanelOLS Estimation Summary                           \n",
+      "================================================================================\n",
+      "Dep. Variable:                    qty   R-squared:                        0.0003\n",
+      "Estimator:                   PanelOLS   R-squared (Between):             -0.0085\n",
+      "No. Observations:              363312   R-squared (Within):               0.0007\n",
+      "Date:                Wed, Jan 15 2025   R-squared (Overall):             -0.0028\n",
+      "Time:                        16:09:56   Log-likelihood                -3.303e+06\n",
+      "Cov. Estimator:             Clustered                                           \n",
+      "                                        F-statistic:                      20.914\n",
+      "Entities:                        1682   P-value                           0.0000\n",
+      "Avg Obs:                       216.00   Distribution:                F(6,361409)\n",
+      "Min Obs:                       216.00                                           \n",
+      "Max Obs:                       216.00   F-statistic (robust):             5.1089\n",
+      "                                        P-value                           0.0000\n",
+      "Time periods:                     216   Distribution:                F(6,361409)\n",
+      "Avg Obs:                       1682.0                                           \n",
+      "Min Obs:                       1682.0                                           \n",
+      "Max Obs:                       1682.0                                           \n",
+      "                                                                                \n",
+      "                                          Parameter Estimates                                          \n",
+      "=======================================================================================================\n",
+      "                                     Parameter  Std. Err.     T-stat    P-value    Lower CI    Upper CI\n",
+      "-------------------------------------------------------------------------------------------------------\n",
+      "promotion_type_Corporate Promotions    -251.82     83.315    -3.0225     0.0025     -415.12     -88.526\n",
+      "promotion_type_Correction              -61.983     171.10    -0.3623     0.7172     -397.33      273.36\n",
+      "promotion_type_EDLC                    -143.16     151.02    -0.9480     0.3431     -439.15      152.83\n",
+      "promotion_type_EDLP                    -39.763     88.265    -0.4505     0.6524     -212.76      133.23\n",
+      "promotion_type_Hi Lo                   -41.676     143.29    -0.2908     0.7712     -322.53      239.18\n",
+      "promotion_type_Miscellaneous            215.72     47.178     4.5724     0.0000      123.25      308.19\n",
+      "=======================================================================================================\n",
+      "\n",
+      "F-test for Poolability: 110.30\n",
+      "P-value: 0.0000\n",
+      "Distribution: F(1896,361409)\n",
+      "\n",
+      "Included effects: Entity, Time\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from linearmodels.panel import PanelOLS\n",
+    "\n",
+    "# Step 1: Prepare the data\n",
+    "# Create a combined unit identifier\n",
+    "aggregated_df['unit_id'] = aggregated_df['sales_org'].astype(str) + '_' + \\\n",
+    "                           aggregated_df['dp_cust'].astype(str) + '_' + \\\n",
+    "                           aggregated_df['dmd_item_10'].astype(str)\n",
+    "\n",
+    "# Set multi-index for panel data\n",
+    "aggregated_df = aggregated_df.set_index(['unit_id', 'week_start_date'])\n",
+    "\n",
+    "# Ensure the dependent variable is numeric\n",
+    "aggregated_df['qty'] = pd.to_numeric(aggregated_df['qty'], errors='coerce')\n",
+    "\n",
+    "# Step 2: Define independent variables (X)\n",
+    "x_columns = [\n",
+    "    'promotion_type_Corporate Promotions',\n",
+    "    'promotion_type_Correction',\n",
+    "    'promotion_type_EDLC',\n",
+    "    'promotion_type_EDLP',\n",
+    "    'promotion_type_Hi Lo',\n",
+    "    'promotion_type_Miscellaneous'\n",
+    "]\n",
+    "X = aggregated_df[x_columns]\n",
+    "\n",
+    "# Step 3: Define dependent variable (y)\n",
+    "y = aggregated_df['qty']\n",
+    "\n",
+    "# Step 4: Specify the panel model with fixed effects\n",
+    "model = PanelOLS(y, X, entity_effects=True, time_effects=True)\n",
+    "\n",
+    "# Step 5: Fit the model\n",
+    "results = model.fit(cov_type='clustered', cluster_entity=True)\n",
+    "\n",
+    "# Step 6: Summarize the results\n",
+    "print(results.summary)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check unique values for combination of week_st"
+    "#sort data by week_start_date, sales_org, dp_cust, dmd_item_10\n",
+    "aggregated_df = aggregated_df.sort_values(by=['week_start_date', 'sales_org', 'dp_cust', 'dmd_item_10'])\n",
+    "\n",
+    "\n",
+    "# save data to C:\\Data\\hershey_promo_impact\\aggregated_shipment_hist_weekly_with_promo_features.csv\n",
+    "aggregated_df.to_csv(\"C:\\\\Data\\\\hershey_promo_impact\\\\aggregated_shipment_hist_weekly_with_promo_features.csv\", index=False)"
    ]
   }
  ],
