--- a/notebooks/panel.ipynb
+++ b/notebooks/panel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
       "Estimator:                   PanelOLS   R-squared (Between):             -0.0085\n",
       "No. Observations:              363312   R-squared (Within):               0.0007\n",
       "Date:                Wed, Jan 15 2025   R-squared (Overall):             -0.0028\n",
-      "Time:                        16:09:56   Log-likelihood                -3.303e+06\n",
+      "Time:                        20:14:52   Log-likelihood                -3.303e+06\n",
       "Cov. Estimator:             Clustered                                           \n",
       "                                        F-statistic:                      20.914\n",
       "Entities:                        1682   P-value                           0.0000\n",
@@ -213,6 +213,82 @@
     "\n",
     "# Step 6: Summarize the results\n",
     "print(results.summary)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "panel for lead and lag of qty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results saved to C:\\Users\\AdlerXie\\Documents\\GitHub\\Hershey_promo\\output\\panel_model_results.xlsx\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from linearmodels.panel import PanelOLS\n",
+    "\n",
+    "\n",
+    "# Step 2: Create lag and lead variables\n",
+    "lags = [1, 2, 4, 8]\n",
+    "leads = [1, 2, 4, 8]\n",
+    "\n",
+    "for lag in lags:\n",
+    "    aggregated_df[f'lag{lag}'] = aggregated_df.groupby(level='unit_id')['qty'].shift(lag)\n",
+    "\n",
+    "for lead in leads:\n",
+    "    aggregated_df[f'lead{lead}'] = aggregated_df.groupby(level='unit_id')['qty'].shift(-lead)\n",
+    "\n",
+    "# Step 3: Define independent variables (X)\n",
+    "x_columns = [\n",
+    "    'promotion_type_Corporate Promotions',\n",
+    "    'promotion_type_Correction',\n",
+    "    'promotion_type_EDLC',\n",
+    "    'promotion_type_EDLP',\n",
+    "    'promotion_type_Hi Lo',\n",
+    "    'promotion_type_Miscellaneous'\n",
+    "]\n",
+    "X = aggregated_df[x_columns]\n",
+    "\n",
+    "# Step 4: Run panel models for each lag/lead variable\n",
+    "results_summary = []\n",
+    "\n",
+    "for y_var in [f'lag{lag}' for lag in lags] + [f'lead{lead}' for lead in leads]:\n",
+    "    y = aggregated_df[y_var].dropna()\n",
+    "    X_subset = X.loc[y.index]  # Align X with the available y data\n",
+    "\n",
+    "    # Fit the model\n",
+    "    model = PanelOLS(y, X_subset, entity_effects=True, time_effects=True)\n",
+    "    results = model.fit(cov_type='clustered', cluster_entity=True)\n",
+    "\n",
+    "    # Store results\n",
+    "    summary_dict = {\n",
+    "        'Dependent Variable': y_var,\n",
+    "        'R-squared': results.rsquared,\n",
+    "        'Number of Observations': results.nobs\n",
+    "    }\n",
+    "    for var in x_columns:\n",
+    "        summary_dict[f'{var}_coef'] = results.params.get(var, None)\n",
+    "        summary_dict[f'{var}_pval'] = results.pvalues.get(var, None)\n",
+    "    results_summary.append(summary_dict)\n",
+    "\n",
+    "# Step 5: Save results to Excel\n",
+    "results_df = pd.DataFrame(results_summary)\n",
+    "output_path = 'C:\\\\Users\\\\AdlerXie\\\\Documents\\\\GitHub\\\\Hershey_promo\\\\output\\\\panel_model_results.xlsx'\n",
+    "results_df.to_excel(output_path, index=False)\n",
+    "\n",
+    "print(f\"Results saved to {output_path}\")\n"
    ]
   },
   {
