--- a/notebooks/panel.ipynb
+++ b/notebooks/panel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,21 +56,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "promotion_type\n",
+      "NaN                     300634\n",
+      "EDLP                     23957\n",
+      "Hi Lo                    12942\n",
+      "Corporate Promotions     10138\n",
+      "EDLC                      6034\n",
+      "Miscellaneous             4864\n",
+      "Correction                4743\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# replace promotion_type with NA if on_promotion is 0\n",
     "aggregated_df.loc[aggregated_df['on_promotion'] == False, 'promotion_type'] = np.nan\n",
     "\n",
+    "# count for each unique value of promotion_type\n",
+    "print(aggregated_df['promotion_type'].value_counts(dropna=False))\n",
+    "\n",
     "# create dummy variables for promotion_type\n",
-    "aggregated_df = pd.get_dummies(aggregated_df, columns=['promotion_type'], dummy_na=True)\n",
-    "\n"
+    "aggregated_df = pd.get_dummies(aggregated_df, columns=['promotion_type'], dummy_na=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -117,64 +135,21 @@
     "aggregated_df['week_start_date'] = pd.to_datetime(aggregated_df['week_start_date'])\n",
     "\n",
     "# check data types for each column\n",
-    "print(aggregated_df.dtypes)"
+    "# print(aggregated_df.dtypes)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Panel Model"
+    "Set panel model index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                          PanelOLS Estimation Summary                           \n",
-      "================================================================================\n",
-      "Dep. Variable:                    qty   R-squared:                        0.0003\n",
-      "Estimator:                   PanelOLS   R-squared (Between):             -0.0085\n",
-      "No. Observations:              363312   R-squared (Within):               0.0007\n",
-      "Date:                Wed, Jan 15 2025   R-squared (Overall):             -0.0028\n",
-      "Time:                        20:14:52   Log-likelihood                -3.303e+06\n",
-      "Cov. Estimator:             Clustered                                           \n",
-      "                                        F-statistic:                      20.914\n",
-      "Entities:                        1682   P-value                           0.0000\n",
-      "Avg Obs:                       216.00   Distribution:                F(6,361409)\n",
-      "Min Obs:                       216.00                                           \n",
-      "Max Obs:                       216.00   F-statistic (robust):             5.1089\n",
-      "                                        P-value                           0.0000\n",
-      "Time periods:                     216   Distribution:                F(6,361409)\n",
-      "Avg Obs:                       1682.0                                           \n",
-      "Min Obs:                       1682.0                                           \n",
-      "Max Obs:                       1682.0                                           \n",
-      "                                                                                \n",
-      "                                          Parameter Estimates                                          \n",
-      "=======================================================================================================\n",
-      "                                     Parameter  Std. Err.     T-stat    P-value    Lower CI    Upper CI\n",
-      "-------------------------------------------------------------------------------------------------------\n",
-      "promotion_type_Corporate Promotions    -251.82     83.315    -3.0225     0.0025     -415.12     -88.526\n",
-      "promotion_type_Correction              -61.983     171.10    -0.3623     0.7172     -397.33      273.36\n",
-      "promotion_type_EDLC                    -143.16     151.02    -0.9480     0.3431     -439.15      152.83\n",
-      "promotion_type_EDLP                    -39.763     88.265    -0.4505     0.6524     -212.76      133.23\n",
-      "promotion_type_Hi Lo                   -41.676     143.29    -0.2908     0.7712     -322.53      239.18\n",
-      "promotion_type_Miscellaneous            215.72     47.178     4.5724     0.0000      123.25      308.19\n",
-      "=======================================================================================================\n",
-      "\n",
-      "F-test for Poolability: 110.30\n",
-      "P-value: 0.0000\n",
-      "Distribution: F(1896,361409)\n",
-      "\n",
-      "Included effects: Entity, Time\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from linearmodels.panel import PanelOLS\n",
@@ -191,7 +166,23 @@
     "# Ensure the dependent variable is numeric\n",
     "aggregated_df['qty'] = pd.to_numeric(aggregated_df['qty'], errors='coerce')\n",
     "\n",
-    "# Step 2: Define independent variables (X)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "create x for panel analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 3: Define independent variables (X)\n",
     "x_columns = [\n",
     "    'promotion_type_Corporate Promotions',\n",
     "    'promotion_type_Correction',\n",
@@ -200,19 +191,41 @@
     "    'promotion_type_Hi Lo',\n",
     "    'promotion_type_Miscellaneous'\n",
     "]\n",
-    "X = aggregated_df[x_columns]\n",
+    "X = aggregated_df[x_columns]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "create potential y for panel analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create lead and lag of qty\n",
+    "lags = [8,4,2,1,0]\n",
+    "leads = [1,2,4, 8]\n",
     "\n",
-    "# Step 3: Define dependent variable (y)\n",
-    "y = aggregated_df['qty']\n",
+    "# create lag and lead of qty\n",
+    "for lag in lags:\n",
+    "    aggregated_df[f'lag{lag}'] = aggregated_df.groupby(level='unit_id')['qty'].shift(lag)\n",
     "\n",
-    "# Step 4: Specify the panel model with fixed effects\n",
-    "model = PanelOLS(y, X, entity_effects=True, time_effects=True)\n",
+    "for lead in leads:\n",
+    "    aggregated_df[f'lead{lead}'] = aggregated_df.groupby(level='unit_id')['qty'].shift(-lead)\n",
     "\n",
-    "# Step 5: Fit the model\n",
-    "results = model.fit(cov_type='clustered', cluster_entity=True)\n",
+    "# create log(qty), and lead and lag of log(qty)\n",
+    "aggregated_df['log_qty'] = np.log(aggregated_df['qty'] + 1)\n",
     "\n",
-    "# Step 6: Summarize the results\n",
-    "print(results.summary)\n"
+    "for lag in lags:\n",
+    "    aggregated_df[f'log_lag{lag}'] = aggregated_df.groupby(level='unit_id')['log_qty'].shift(lag)\n",
+    "\n",
+    "for lead in leads:\n",
+    "    aggregated_df[f'log_lead{lead}'] = aggregated_df.groupby(level='unit_id')['log_qty'].shift(-lead)"
    ]
   },
   {
@@ -224,47 +237,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Results saved to C:\\Users\\AdlerXie\\Documents\\GitHub\\Hershey_promo\\output\\panel_model_results.xlsx\n"
+      "Results saved to C:\\Users\\AdlerXie\\Documents\\GitHub\\Hershey_promo\\output\\log_panel_model_results.xlsx\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from linearmodels.panel import PanelOLS\n",
-    "\n",
-    "\n",
-    "# Step 2: Create lag and lead variables\n",
-    "lags = [1, 2, 4, 8]\n",
-    "leads = [1, 2, 4, 8]\n",
-    "\n",
-    "for lag in lags:\n",
-    "    aggregated_df[f'lag{lag}'] = aggregated_df.groupby(level='unit_id')['qty'].shift(lag)\n",
-    "\n",
-    "for lead in leads:\n",
-    "    aggregated_df[f'lead{lead}'] = aggregated_df.groupby(level='unit_id')['qty'].shift(-lead)\n",
-    "\n",
-    "# Step 3: Define independent variables (X)\n",
-    "x_columns = [\n",
-    "    'promotion_type_Corporate Promotions',\n",
-    "    'promotion_type_Correction',\n",
-    "    'promotion_type_EDLC',\n",
-    "    'promotion_type_EDLP',\n",
-    "    'promotion_type_Hi Lo',\n",
-    "    'promotion_type_Miscellaneous'\n",
-    "]\n",
-    "X = aggregated_df[x_columns]\n",
-    "\n",
     "# Step 4: Run panel models for each lag/lead variable\n",
     "results_summary = []\n",
     "\n",
-    "for y_var in [f'lag{lag}' for lag in lags] + [f'lead{lead}' for lead in leads]:\n",
+    "for y_var in [f'log_lag{lag}' for lag in lags] + [f'log_lead{lead}' for lead in leads]:\n",
     "    y = aggregated_df[y_var].dropna()\n",
     "    X_subset = X.loc[y.index]  # Align X with the available y data\n",
     "\n",
@@ -285,10 +273,92 @@
     "\n",
     "# Step 5: Save results to Excel\n",
     "results_df = pd.DataFrame(results_summary)\n",
-    "output_path = 'C:\\\\Users\\\\AdlerXie\\\\Documents\\\\GitHub\\\\Hershey_promo\\\\output\\\\panel_model_results.xlsx'\n",
+    "output_path = 'C:\\\\Users\\\\AdlerXie\\\\Documents\\\\GitHub\\\\Hershey_promo\\\\output\\\\log_panel_model_results.xlsx'\n",
     "results_df.to_excel(output_path, index=False)\n",
     "\n",
     "print(f\"Results saved to {output_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "archive"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Panel Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                          PanelOLS Estimation Summary                           \n",
+      "================================================================================\n",
+      "Dep. Variable:                log_qty   R-squared:                        0.0031\n",
+      "Estimator:                   PanelOLS   R-squared (Between):              0.0114\n",
+      "No. Observations:              363312   R-squared (Within):              -0.0026\n",
+      "Date:                Thu, Jan 16 2025   R-squared (Overall):              0.0045\n",
+      "Time:                        11:13:00   Log-likelihood                -7.467e+05\n",
+      "Cov. Estimator:             Clustered                                           \n",
+      "                                        F-statistic:                      184.48\n",
+      "Entities:                        1682   P-value                           0.0000\n",
+      "Avg Obs:                       216.00   Distribution:                F(6,361409)\n",
+      "Min Obs:                       216.00                                           \n",
+      "Max Obs:                       216.00   F-statistic (robust):             4.5675\n",
+      "                                        P-value                           0.0001\n",
+      "Time periods:                     216   Distribution:                F(6,361409)\n",
+      "Avg Obs:                       1682.0                                           \n",
+      "Min Obs:                       1682.0                                           \n",
+      "Max Obs:                       1682.0                                           \n",
+      "                                                                                \n",
+      "                                          Parameter Estimates                                          \n",
+      "=======================================================================================================\n",
+      "                                     Parameter  Std. Err.     T-stat    P-value    Lower CI    Upper CI\n",
+      "-------------------------------------------------------------------------------------------------------\n",
+      "promotion_type_Corporate Promotions    -0.3041     0.1799    -1.6906     0.0909     -0.6566      0.0485\n",
+      "promotion_type_Correction              -0.3438     0.2481    -1.3859     0.1658     -0.8300      0.1424\n",
+      "promotion_type_EDLC                     0.1224     0.2508     0.4879     0.6256     -0.3692      0.6140\n",
+      "promotion_type_EDLP                     0.2152     0.1324     1.6251     0.1042     -0.0444      0.4748\n",
+      "promotion_type_Hi Lo                    0.0648     0.1646     0.3936     0.6938     -0.2578      0.3874\n",
+      "promotion_type_Miscellaneous            0.9194     0.2069     4.4437     0.0000      0.5139      1.3250\n",
+      "=======================================================================================================\n",
+      "\n",
+      "F-test for Poolability: 163.19\n",
+      "P-value: 0.0000\n",
+      "Distribution: F(1896,361409)\n",
+      "\n",
+      "Included effects: Entity, Time\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = aggregated_df[x_columns]\n",
+    "y = aggregated_df['log_qty']\n",
+    "# Step 4: Specify the panel model with fixed effects\n",
+    "model = PanelOLS(y, X, entity_effects=True, time_effects=True)\n",
+    "\n",
+    "# Step 5: Fit the model\n",
+    "results = model.fit(cov_type='clustered', cluster_entity=True)\n",
+    "\n",
+    "# Step 6: Summarize the results\n",
+    "print(results.summary)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "log(qty) panel model"
    ]
   },
   {
