--- a/notebooks/exploration_panel.ipynb
+++ b/notebooks/exploration_panel.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "Primary Key ['sales_org', 'dp_cust', 'from_loc', 'dmd_item_10', 'week_start_date']\n",
     "qty: shipment quantity\n",
-    "po_qty_week_1: 1 weak ahead purchase order quantity\n",
+    "po_qty_week_1: 1 weak ago purchase order quantity\n",
     "price_sch3: base price, time invariant\n",
     "total_expense_trade'\n",
     "forecast_cot_spend'"
