--- a/notebooks/exploration_panel.ipynb
+++ b/notebooks/exploration_panel.ipynb
@@ -378,7 +378,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "p312",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
